colorsapplicator: Don't allow extended RGB from OKLabToLinearSRGB

When reading the rgb values in OKLabToLinearSRGB, there is a chance,
when colors are tinted, for QColor::fromRgbF to return Extended RGB
colors, which can invert.
Read more at
https://doc.qt.io/qt-6/qcolor.html#the-extended-rgb-color-model

Instead, just make sure we always return regular RGB values.

BUG: 503394
FIXED-IN: 6.3